--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,10 +1,28 @@
-.autocomplete-content-editable-menu {
+.autocomplete-content-editable-menu > ul {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     position: relative;
     display: inline-block;
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    min-width: 5rem;
+    height: fit-content;
     overflow: hidden;
     border-radius: 4px;
+    border: 1px solid #ccc;
+    padding: 0px;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    list-style: none;
+    margin: 0;
+    z-index: 1000;
+    transform: translateY(-105%);
+    
+    li {
+        padding: 8px 12px;
+        cursor: pointer;
+    }
+    li:hover {
+        background-color: #f0f0f0;
+    }
+    
 }
