--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,37 +1,42 @@
 .autocomplete-content-editable-menu > ul {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    position: relative;
-    display: inline-block;
-    width: fit-content;
-    min-width: 5rem;
-    height: fit-content;
-    overflow: hidden;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    padding: 0px;
-    background-color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    list-style: none;
-    margin: 0;
-    transform: translateY(-105%);
-    
-    li {
-        padding: 8px 12px;
-        cursor: pointer;
-    }
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	position: relative;
+	display: inline-block;
+	width: fit-content;
+	min-width: 5rem;
+	height: fit-content;
+	overflow: hidden;
+	border-radius: 4px;
+	border: 1px solid #ccc;
+	padding: 0px;
+	background-color: white;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	list-style: none;
+	margin: 0;
+	transform: translateY(-105%);
 
-    li.active {
-        background-color: #f0f0f0;
-    }
+	li {
+		padding: 8px 12px;
+		cursor: pointer;
+	}
 
-    li:hover {
-        background-color: #f0f0f0;
-    }
+	li.active {
+		background-color: #f0f0f0;
+	}
 
-    .menu-icon {
-        margin-right: 8px;
-        width: 16px;
-        height: 16px;
-    }
+	li.disabled {
+		color: #999;
+		cursor: not-allowed;
+	}
+
+	li:hover {
+		background-color: #f0f0f0;
+	}
+
+	.menu-icon {
+		margin-right: 8px;
+		width: 16px;
+		height: 16px;
+	}
 }
